1.20.1:

2011-11-29  Murray Cumming  <murrayc@murrayc.com>

	test_document_change: Test a little more API.

	* tests/test_document_change.cc: Add a table and test some API that uses it.
	We could do much more here.

2011-11-29  Murray Cumming  <murrayc@murrayc.com>

	test_document_load_and_change: Test Document::remove_field() too.

	* tests/test_document_load_and_change.cc: Exercise a little more of the API.

2011-11-29  Murray Cumming  <murrayc@murrayc.com>

	LayoutGroup: Add a more useful remove_field().

	* glom/libglom/data_structure/layout/layoutgroup.[h|cc]:
	Add a remove_field(parent_table_name, table_name, field_name) method overload,
	deprecating the existing method overloads.
	* glom/libglom/document/document.cc: Adapt.
	* tests/test_document_load_and_change.cc: Test a different example,
	so we can check for a related field on a layout.

2011-11-29  Murray Cumming  <murrayc@murrayc.com>

	LayoutGroup: Deprecate the old has_field() method and do not use it.

	* glom/libglom/data_structure/layout/layoutgroup.h:
	* glom/libglom/document/document.cc:
	* tests/test_document_load.cc: Adapt.

2011-11-29  Murray Cumming  <murrayc@murrayc.com>

	test_document_load: Check that a field is on a layout.

	* glom/libglom/data_structure/layout/layoutgroup.[h|cc]:
	Added has_field() that can find a related field.
	* tests/test_document_load.cc: Check that an expected field is found on
	the layout.

2011-11-29  Murray Cumming  <murrayc@murrayc.com>

	Add a test for changing of a field name. 

	* tests/Makefile.am:
	* tests/test_document_load_and_change.cc: Change a field name and 
	make sure that it has updated throughout the document.
	However, we still need to check lookups and related fields.

2011-11-28  Murray Cumming  <murrayc@murray.com>

	Field::set_field_info(): Avoid unnecessary checks (and warnings).

	* glom/libglom/data_structure/field.cc: If the type is not yet set,
	don't bother checking that everything else uses that type.